--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <title>Janice Lee</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
 
@@ -52,10 +53,12 @@
   <p style="font-size: 130%">I'm a computer science student at MIT.</p>
   <p style="font-size: 130%">I'm passionate about creating more happiness in the world, whether it's improving the lives of others,</p>
   <p style="font-size: 130%">or giving us humans more things to be excited about.</p>  
-  <p style="font-size: 130%">I want chocolate.</p>
+  <p style="font-size: 130%">I want choco</p>
   <br>
   <img src="http://24.media.tumblr.com/7f9b45626428bd58107586b7230404cd/tumblr_mk1eszXhbG1qc4uvwo1_500.gif" class="img-circle"/>
 </div>
+
+
 
 <!-- Container (Skills Section) -->
 <div id="skills" class="bg-1">
@@ -65,34 +68,39 @@
     <p>I can make noodles :D</p>   
     <br>
     <h1>Academic Coursework</h1>
-    <ul style="width:50%; float:left; list-style: none; text:justify;">
-      <li class="courses" style="font-size: 140%">Freshman Fall</li>
-      <li class="courses">>  18.02 - Multivariable Calculus</li>
-      <li class="courses">>  8.01 - Classical Mechanics</li>
-      <li class="courses">>  7.012 - Introduction to Biology</li>
-      <li class="courses">>  STS.034 - Science Communication</li>
-      <br>
-      <li class="courses" style="font-size: 140%">Freshman Spring</li>
-      <li class="courses">>  6.01 - Introduction to EECS I</li>
-      <li class="courses">>  5.111 - Principles of Chemical Science</li>
-      <li class="courses">>  8.02 - Electricity and Magnetism</li>
-      <li class="courses">>  24.01 - Classics of Western Philosophy</li>    
-    </ul>
+    <div class="row">
+      <ul class="col-md-6" style="list-style: none">
+        <li class="courses" style="font-size: 140%">Freshman Fall</li>
+        <li class="courses">>  18.02 - Multivariable Calculus</li>
+        <li class="courses">>  8.01 - Classical Mechanics</li>
+        <li class="courses">>  7.012 - Introduction to Biology</li>
+        <li class="courses">>  STS.034 - Science Communication</li>
+        <br>
+        <li class="courses" style="font-size: 140%">Freshman IAP</li>
+        <li class="courses">>  6.149 - Introduction to Python</li>
+        <br> 
+        <li class="courses" style="font-size: 140%">Freshman Spring</li>
+        <li class="courses">>  6.01 - Introduction to EECS I</li>
+        <li class="courses">>  5.111 - Principles of Chemical Science</li>
+        <li class="courses">>  8.02 - Electricity and Magnetism</li>
+        <li class="courses">>  24.01 - Classics of Western Philosophy</li>    
+      </ul>
 
-    <ul style="width:50%; float:left; list-style: none">
-      <li class="courses" style="font-size: 140%">Sophomore Fall</li>
-      <li class="courses">>  6.009 - Fundamentals of Programming</li>
-      <li class="courses">>  6.004 - Computation Structures</li>
-      <li class="courses">>  6.042 - Mathematics for Computer Science</li>
-      <li class="courses">>  21G.501 - Japanese I</li>
-      <br>
-      <li class="courses" style="font-size: 140%">Sophomore Spring</li>
-      <li class="courses">>  6.006 - Introduction to Algorithms</li>
-      <li class="courses">>  6.031 - Elements of Software Construction</li>
-      <li class="courses">>  9.00 - Introduction to Psychology</li>
-      <li class="courses">>  21G.502 - Japanese II</li>
+      <ul class="col-md-6" style="list-style: none">
+        <li class="courses" style="font-size: 140%">Sophomore Fall</li>
+        <li class="courses">>  6.009 - Fundamentals of Programming</li>
+        <li class="courses">>  6.004 - Computation Structures</li>
+        <li class="courses">>  6.042 - Mathematics for Computer Science</li>
+        <li class="courses">>  21G.501 - Japanese I</li>
+        <br>
+        <li class="courses" style="font-size: 140%">Sophomore Spring</li>
+        <li class="courses">>  6.006 - Introduction to Algorithms</li>
+        <li class="courses">>  6.031 - Elements of Software Construction</li>
+        <li class="courses">>  9.00 - Introduction to Psychology</li>
+        <li class="courses">>  21G.502 - Japanese II</li>
 
-    </ul>
+      </ul>
+    </div>
   </div>
 </div>
 
@@ -100,41 +108,43 @@
 <div id="things" class="container">
   <h1 class="text-center">Thingies</h1>
   <p class="text-center">Here is random things I've done lol</p>
-<div class="row">
-  <div class="col-sm-4">
-    <p class="text-center"><strong>Name</strong></p><br>
-    <a href="#demo" data-toggle="collapse">
-      <img src="https://www.easycalculation.com/area/images/big-square.gif" class="img-circle project">
-    </a>
-    <div id="demo" class="collapse">
-      <p>asdfsaf</p>
-      <p>Loves long walks on the beach</p>
-      <p>Memasdf</p>
+
+  <div class="row">
+
+    <div class="col-md-4 text-center">
+      <p class="text-center"><strong>Name</strong></p><br>
+      <a href="#demo" data-toggle="collapse">
+        <img src="http://mobcup.net/content/jwt/6458975" class="img-circle project">
+      </a>
+      <div id="demo" class="collapse">
+        <p>asdfsaf</p>
+        <p>Loves long walks on the beach</p>
+        <p>Memasdf</p>
+      </div>
+    </div>
+    <div class="col-md-4 text-center">
+      <p class="text-center"><strong>Name</strong></p><br>
+      <a href="#demo2" data-toggle="collapse">
+        <img src="http://mobcup.net/content/jwt/6458975" class="img-circle project">
+      </a>
+      <div id="demo2" class="collapse">
+        <p>Drummer</p>
+        <p>Loves drummin'</p>
+        <p>Member since 1988</p>
+      </div>
+    </div>
+    <div class="col-md-4 text-center">
+      <p class="text-center"><strong>Name</strong></p><br>
+      <a href="#demo3" data-toggle="collapse">
+        <img src="http://mobcup.net/content/jwt/6458975" class="img-circle project">
+      </a>
+      <div id="demo3" class="collapse">
+        <p>Bass player</p>
+        <p>hiii</p>
+        <p>hi</p>
+      </div>
     </div>
   </div>
-  <div class="col-sm-4">
-    <p class="text-center"><strong>Name</strong></p><br>
-    <a href="#demo2" data-toggle="collapse">
-      <img src="https://www.easycalculation.com/area/images/big-square.gif" class="img-circle project">
-    </a>
-    <div id="demo2" class="collapse">
-      <p>Drummer</p>
-      <p>Loves drummin'</p>
-      <p>Member since 1988</p>
-    </div>
-  </div>
-  <div class="col-sm-4">
-    <p class="text-center"><strong>Name</strong></p><br>
-    <a href="#demo3" data-toggle="collapse">
-      <img src="https://www.easycalculation.com/area/images/big-square.gif" class="img-circle project">
-    </a>
-    <div id="demo3" class="collapse">
-      <p>Bass player</p>
-      <p>hiii</p>
-      <p>hi</p>
-    </div>
-  </div>
-</div>
 </div>
 
 <!-- Container (Funsies Section) -->
