--- a/index.html
+++ b/index.html
@@ -12,13 +12,17 @@
   <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Play" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Nunito+Sans" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Cabin" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=PT+Sans+Caption" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Short+Stack" rel="stylesheet">
 
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
-  <link rel="stylesheet" type="text/css" href="deco1.css">
+  <link rel="stylesheet" type="text/css" href="main.css">
 </head>
 
 <body id="home" data-spy="scroll" data-target=".navbar" data-offset="50">
@@ -51,9 +55,11 @@
 <div id="about" class="container text-center">
   <h3 style="font-size: 275%">Hello, I'm Janice.</h3>
   <p style="font-size: 130%">I'm a computer science student at MIT.</p>
-  <p style="font-size: 130%">I'm passionate about creating more happiness in the world, whether it's improving the lives of others,</p>
-  <p style="font-size: 130%">or giving us humans more things to be excited about.</p>  
-  <p style="font-size: 130%">I want choco</p>
+  <p style="font-size: 130%">One thing I'm passionate about is making the world happier, whether it's helping other people,</p>
+  <p style="font-size: 130%">innovating exciting things, or fixing a few of the many problems that we can't escape.</p>  
+  <p style="font-size: 130%">I believe coding is powerful and can achieve all the above.</p>  
+  <p style="font-size: 130%">Also coding is just super cool and fun!</p>  
+  <p style="font-size: 130%">Thanks for visiting my site.</p>
   <br>
   <img src="http://24.media.tumblr.com/7f9b45626428bd58107586b7230404cd/tumblr_mk1eszXhbG1qc4uvwo1_500.gif" class="img-circle"/>
 </div>
@@ -69,35 +75,35 @@
     <br>
     <h1>Academic Coursework</h1>
     <div class="row">
-      <ul class="col-md-6" style="list-style: none">
-        <li class="courses" style="font-size: 140%">Freshman Fall</li>
-        <li class="courses">>  18.02 - Multivariable Calculus</li>
-        <li class="courses">>  8.01 - Classical Mechanics</li>
-        <li class="courses">>  7.012 - Introduction to Biology</li>
-        <li class="courses">>  STS.034 - Science Communication</li>
+      <ul class="col-md-6 x" style="list-style: none">
+        <li style="font-size: 140%">Freshman Fall</li>
+        <li>>  18.02 - Multivariable Calculus</li>
+        <li>>  8.01 - Classical Mechanics</li>
+        <li>>  7.012 - Introduction to Biology</li>
+        <li>>  STS.034 - Science Communication</li>
         <br>
-        <li class="courses" style="font-size: 140%">Freshman IAP</li>
-        <li class="courses">>  6.149 - Introduction to Python</li>
+        <li style="font-size: 140%">Freshman IAP</li>
+        <li>>  6.149 - Introduction to Python</li>
         <br> 
-        <li class="courses" style="font-size: 140%">Freshman Spring</li>
-        <li class="courses">>  6.01 - Introduction to EECS I</li>
-        <li class="courses">>  5.111 - Principles of Chemical Science</li>
-        <li class="courses">>  8.02 - Electricity and Magnetism</li>
-        <li class="courses">>  24.01 - Classics of Western Philosophy</li>    
+        <li style="font-size: 140%">Freshman Spring</li>
+        <li>>  6.01 - Introduction to EECS I</li>
+        <li>>  5.111 - Principles of Chemical Science</li>
+        <li>>  8.02 - Electricity and Magnetism</li>
+        <li>>  24.01 - Classics of Western Philosophy</li>    
       </ul>
 
-      <ul class="col-md-6" style="list-style: none">
-        <li class="courses" style="font-size: 140%">Sophomore Fall</li>
-        <li class="courses">>  6.009 - Fundamentals of Programming</li>
-        <li class="courses">>  6.004 - Computation Structures</li>
-        <li class="courses">>  6.042 - Mathematics for Computer Science</li>
-        <li class="courses">>  21G.501 - Japanese I</li>
+      <ul class="col-md-6 x" style="list-style: none">
+        <li style="font-size: 140%">Sophomore Fall</li>
+        <li>>  6.009 - Fundamentals of Programming</li>
+        <li>>  6.004 - Computation Structures</li>
+        <li>>  6.042 - Mathematics for Computer Science</li>
+        <li>>  21G.501 - Japanese I</li>
         <br>
-        <li class="courses" style="font-size: 140%">Sophomore Spring</li>
-        <li class="courses">>  6.006 - Introduction to Algorithms</li>
-        <li class="courses">>  6.031 - Elements of Software Construction</li>
-        <li class="courses">>  9.00 - Introduction to Psychology</li>
-        <li class="courses">>  21G.502 - Japanese II</li>
+        <li style="font-size: 140%">Sophomore Spring</li>
+        <li>>  6.006 - Introduction to Algorithms</li>
+        <li>>  6.031 - Elements of Software Construction</li>
+        <li>>  9.00 - Introduction to Psychology</li>
+        <li>>  21G.502 - Japanese II</li>
 
       </ul>
     </div>
@@ -105,54 +111,56 @@
 </div>
 
 <!-- Container (Things Section) -->
-<div id="things" class="container">
+<div id="things" class="container y">
   <h1 class="text-center">Thingies</h1>
-  <p class="text-center">Here is random things I've done lol</p>
+  <p class="text-center">Here are random things I've done lol</p><br>
 
   <div class="row">
-
     <div class="col-md-4 text-center">
-      <p class="text-center"><strong>Name</strong></p><br>
       <a href="#demo" data-toggle="collapse">
         <img src="http://mobcup.net/content/jwt/6458975" class="img-circle project">
       </a>
       <div id="demo" class="collapse">
-        <p>asdfsaf</p>
-        <p>Loves long walks on the beach</p>
-        <p>Memasdf</p>
+        <p>Code for Good Consulting Team</p>
+        <p>Worked on Green Street Initiative's website.</p>
+        <p>Created an employer interface for Green Street's Corporate Challenge using Python, Django, and HTML & CSS.</p>
       </div>
     </div>
     <div class="col-md-4 text-center">
-      <p class="text-center"><strong>Name</strong></p><br>
       <a href="#demo2" data-toggle="collapse">
         <img src="http://mobcup.net/content/jwt/6458975" class="img-circle project">
       </a>
       <div id="demo2" class="collapse">
-        <p>Drummer</p>
-        <p>Loves drummin'</p>
-        <p>Member since 1988</p>
+        <p>MISTI-Hong Kong Researcher</p>
+        <p>Learned about machine learning and imaging concepts.</p>
+        <p>Experimented with a Python model to yield best possible time/accuracy.</p>
       </div>
     </div>
     <div class="col-md-4 text-center">
-      <p class="text-center"><strong>Name</strong></p><br>
       <a href="#demo3" data-toggle="collapse">
         <img src="http://mobcup.net/content/jwt/6458975" class="img-circle project">
       </a>
       <div id="demo3" class="collapse">
-        <p>Bass player</p>
-        <p>hiii</p>
-        <p>hi</p>
+        <p>Boeing Phantom Phoenix Intern</p>
+        <p>Learned</p>
       </div>
     </div>
   </div>
 </div>
 
 <!-- Container (Funsies Section) -->
-<div id="funsies" class="bg-1">
+<div id="funsies" class="bg-1 z">
   <div class="container">
     <h1 class="text-center">Funsies</h1>
-    <p>I love to have fun lol</p>
-    <p>I like to do arts and crafts, travel to pretty places, cook, watch shows, do jigsaw puzzles, take pictures of everything, enjoy the sunset, drink tea...</p>
+    <p>Fun is an important part of my life.</p>
+    <p>When I'm not doing schoolwork, you can probably find me doing one of the following...</p>
+    <p>I like to do arts and crafts. I enjoy making people star jars, folding origami notes, and making cards for random occasions.</p>
+    <p>I like to pretend I know how to dance. I'm on my school's Asian Dance Team and was in Dance Troupe one semester.</p>
+    <p>I like to travel to pretty places...I dream to see an aurora and a clear, starry sky one day.</p>
+    <p>I also enjoy pretending I know how to cook, watching shows, doing jigsaw puzzles, taking pictures of everything, enjoying the sunset, and drinking tea. I love milk tea!</p>
+    <p>You may also find me just staring blank at a random object daydreaming.</p>
+    <br><br>
+    <center><img src="https://storage.googleapis.com/imgfave/image_cache/1445423826800243.jpg" class="img-circle text-center"></center>
   </div>
 </div>
 
@@ -161,7 +169,7 @@
   <a class="up-arrow" href="#home" data-toggle="tooltip" title="TO TOP">
     <span class="glyphicon glyphicon-chevron-up"></span>
   </a><br><br>
-  <p>Made with love by Janice :)</p> 
+  <p>Made with cheese by Janice :)</p> 
 </footer>
 
 <script>
