--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <li><a href="#skills">Skills & Coursework</a></li>
         <li><a href="#things">Things I've Done</a></li>        
         <li><a href="#funsies">Funsies</a></li>
-        <li><a href="LeeResume.pdf">Resume</a></li>
+        <li><a href="https://www.youtube.com/watch?v=wg2G_7eiGBcf">Resume</a></li>
       </ul>
     </div>
   </div>
@@ -141,8 +141,8 @@
         <img src="http://mobcup.net/content/jwt/6458975" class="img-circle project">
       </a>
       <div id="demo3" class="collapse">
-        <p>Boeing Phantom Phoenix Intern</p>
-        <p>Learned</p>
+        <p>???</p>
+        <p>???</p>
       </div>
     </div>
   </div>
