Change class name

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         <li style="font-size: 140%">Sophomore Spring</li>
         <li>>  6.006 - Introduction to Algorithms</li>
         <li>>  6.031 - Elements of Software Construction</li>
-        <li>>  9.00 - Introduction to Psychology</li>
+        <li>>  9.00 - Introduction to Psychological Science</li>
         <li>>  21G.502 - Japanese II</li>
 
       </ul>
