Fix resume link

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <li><a href="#skills">Skills & Coursework</a></li>
         <li><a href="#things">Things I've Done</a></li>        
         <li><a href="#funsies">Funsies</a></li>
-        <li><a href="https://www.youtube.com/watch?v=wg2G_7eiGBcf">Resume</a></li>
+        <li><a href="LeeResume.pdf">Resume</a></li>
       </ul>
     </div>
   </div>
@@ -102,7 +102,7 @@
         <li style="font-size: 140%">Sophomore Spring</li>
         <li>>  6.006 - Introduction to Algorithms</li>
         <li>>  6.031 - Elements of Software Construction</li>
-        <li>>  9.00 - Introduction to Psychological Science</li>
+        <li>>  9.00 - Introduction to Psychological Science t</li>
         <li>>  21G.502 - Japanese II</li>
 
       </ul>
