--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
   <link rel="stylesheet" type="text/css" href="main.css">
+
+  <link rel="shortcut icon" href="favicon.ico" />
 </head>
 
 <body id="home" data-spy="scroll" data-target=".navbar" data-offset="50">
