--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
     <p>I like to do arts and crafts. I enjoy making people star jars, folding origami notes, and making cards for random occasions.</p>
     <p>I like to pretend I know how to dance. I'm on my school's Asian Dance Team and was in Dance Troupe one semester.</p>
     <p>I like to travel to pretty places...I dream to see an aurora and a clear, starry sky one day.</p>
-    <p>I also enjoy pretending I know how to cook, watching shows, doing jigsaw puzzles, taking pictures of everything, enjoying the sunset, and drinking tea. I love milk tea!</p>
+    <p>I also cooking, watching shows, doing jigsaw puzzles, taking pictures of everything, enjoying the sunset, and drinking tea. I love milk tea and macaroni and cheese!</p>
     <p>You may also find me just staring blank at a random object daydreaming.</p>
     <br><br>
     <center><img src="https://storage.googleapis.com/imgfave/image_cache/1445423826800243.jpg" class="img-circle text-center"></center>
