--- a/index.html
+++ b/index.html
@@ -1,23 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Richard Zhao</title>
+  <title>Janice Lee</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
 
-  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Play" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Nunito+Sans" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Cabin" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=PT+Sans+Caption" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Short+Stack" rel="stylesheet">
 
+  <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Muli" rel="stylesheet">
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -37,14 +34,14 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>                        
       </button>
-      <a class="navbar-brand" href="#home">Janice Lee!</a>
+      <a class="navbar-brand" href="#home">Janice Lee</a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#about">About Me</a></li>
         <li><a href="#skills">Skills & Coursework</a></li>
-        <li><a href="#things">Things I've Done</a></li>        
-        <li><a href="#funsies">Funsies</a></li>
+        <li><a href="#things">Experiences</a></li>        
+        <li><a href="#funsies">Hobbies</a></li>
         <li><a href="LeeResume.pdf">Resume</a></li>
       </ul>
     </div>
@@ -55,13 +52,15 @@
 <!-- Container (About Section) -->
 <div id="about" class="container text-center">
   <h3 style="font-size: 275%">Hello, I'm Janice.</h3>
-  <p style="font-size: 130%">I'm a computer science student at MIT.</p>
-  <p style="font-size: 130%">One thing I'm passionate about is making the world happier, whether it's helping other people,</p>
-  <p style="font-size: 130%">innovating exciting things, or fixing a few of the many problems that we can't escape.</p>  
-  <p style="font-size: 130%">I believe coding is powerful and can achieve all the above.</p>  
-  <p style="font-size: 130%">Also coding is just super cool and fun!</p>  
-  <p style="font-size: 130%">Thanks for visiting my site.</p>
-  <br>
+  <div class="a">
+    <p style="font-size: 130%">I'm a computer science student at MIT.</p>
+    <p style="font-size: 130%">One thing I'm passionate about is making the world happier, whether it's helping other people,</p>
+    <p style="font-size: 130%">innovating exciting things, or fixing a few of the many problems that we can't escape.</p>  
+    <p style="font-size: 130%">I believe coding is powerful and can achieve all the above.</p>  
+    <p style="font-size: 130%">Also coding is just super cool and fun!</p>  
+    <p style="font-size: 130%">Thanks for visiting my site.</p>
+    <br>
+  </div>
   <img src="http://24.media.tumblr.com/7f9b45626428bd58107586b7230404cd/tumblr_mk1eszXhbG1qc4uvwo1_500.gif" class="img-circle"/>
 </div>
 
@@ -71,8 +70,12 @@
 <div id="skills" class="bg-1">
   <div class="container text-center prof">
     <h1>Skills</h1>
-    <p>I can kinnnna code ; __ ;</p>  
-    <p>I can make noodles :D</p>   
+    <div>
+      <p>Python</p>  
+      <p>Java</p>
+      <p>HTML & CSS (basic)</p>
+      <p>ROS (basic)</p>
+    </div>
     <br>
     <h1>Academic Coursework</h1>
     <div class="row">
@@ -91,6 +94,12 @@
         <li>>  5.111 - Principles of Chemical Science</li>
         <li>>  8.02 - Electricity and Magnetism</li>
         <li>>  24.01 - Classics of Western Philosophy</li>    
+        <br><br><br>
+        <li style="font-size: 140%">Junior Fall</li>
+        <li>>  6.034 - Artificial Intelligence</li>
+        <li>>  6.046 - Design and Analysis of Algorithms</li>
+        <li>>  21G.503 - Japanese III</li>
+        <li>>  TBD</li>   
       </ul>
 
       <ul class="col-md-6 x" style="list-style: none">
@@ -113,53 +122,114 @@
 
 <!-- Container (Things Section) -->
 <div id="things" class="container y">
-  <h1 class="text-center">Thingies</h1>
-  <p class="text-center">Here are random things I've done lol</p><br>
+  <h1 class="text-center">Experiences</h1>
+  <p class="text-center">Here are some things I've done, which include work experience, activities, and leadership roles.</p><br>
 
+  <h1>Work Experience</h1>
   <div class="row">
-    <div class="col-md-4 text-center">
-      <a href="#demo" data-toggle="collapse">
-        <img src="http://mobcup.net/content/jwt/6458975" class="img-circle project">
-      </a>
-      <div id="demo" class="collapse">
-        <p>Code for Good Consulting Team</p>
-        <p>Worked on Green Street Initiative's website.</p>
-        <p>Created an employer interface for Green Street's Corporate Challenge using Python, Django, and HTML & CSS.</p>
-      </div>
-    </div>
-    <div class="col-md-4 text-center">
-      <a href="#demo2" data-toggle="collapse">
-        <img src="http://mobcup.net/content/jwt/6458975" class="img-circle project">
-      </a>
-      <div id="demo2" class="collapse">
-        <p>MISTI-Hong Kong Researcher</p>
-        <p>Learned about machine learning and imaging concepts.</p>
-        <p>Experimented with a Python model to yield best possible time/accuracy.</p>
-      </div>
-    </div>
-    <div class="col-md-4 text-center">
-      <a href="#demo3" data-toggle="collapse">
-        <img src="http://mobcup.net/content/jwt/6458975" class="img-circle project">
-      </a>
-      <div id="demo3" class="collapse">
-        <p>???</p>
-        <p>???</p>
-      </div>
-    </div>
+    <img style="float: left" hspace="10px" class="img-circle" src="csail.jpg" height="50" width="50">
+    <h3>MIT CSAIL Lab</h3>
+    <h5><strong>Undergrad Researcher</strong>  |  <i>Jun-Aug 2017</i></h5>
+    <ul class="col-md-6 x"> <!-- style="list-style: none"> -->
+      <li>Testing and analyzing sensors and their performance for improvement of positioning of small vehicles like quadcopters and small rovers</li>
+      <li>Measured variance of ultra-wide band sensors using ROS and Python</li>
+      <li>Setting up experiments to pair ultra-wide band sensors with GPS sensors to improve localization of small vehicles</li>
+    </ul>
+  </div>
+  <br>
+  <div class="row">
+    <img style="float: left" hspace="10px" class="img-circle" src="misti.jpeg" height="50" width="50">
+    <h3>MISTI Hong Kong</h3>
+    <h5><strong>Undergrad Researcher</strong>  |  <i>Jun-Aug 2016</i></h5>  
+    <ul class="col-md-6 x"> <!-- style="list-style: none"> -->
+      <li>Experimented with a Convolutional Neural Network (CNN) Python model to yield best possible time spent and accuracy in training digits and cells data
+      <li>Increased accuracy in training by tweaking parameters in the code and learned about machine learning and computer skills</li>
+    </ul>
+  </div>
+  <br>
+  <div class="row">
+    <img style="float: left" hspace="10px" class="img-circle" src="boeing.jpg" height="50" width="50">
+    <h3>Boeing HS Internship</h3>
+    <h5><strong>Phantom Phoenix Intern</strong>  |  <i>Jun-Aug 2014</i></h5>  
+    <ul class="col-md-6 x"> <!-- style="list-style: none"> -->
+      <li>Designed a small satellite for the monitoring of earth albedo in a mock project through collaboration with my intern team of 4 and the Boeing Phantom Works division</li>
+      <li>Developed experience in teamwork, project management and spacecraft subsystems and analysis</li>
+    </ul>
+  </div>
+  <br>
+  <h1>Activities and Leadership</h1>
+  <div class="row">
+    <img style="float: left" hspace="10px" class="img-circle" src="wieecs.png" height="50" width="50">
+    <h3>MIT Women in EECS</h3>
+    <h5><strong>Community Events Committee</strong>  |  <i>Aug 2017-present</i></h5>
+    <ul class="col-md-6 x"> <!-- style="list-style: none"> -->
+      <li>Planning budgets and logistics as well as executing community events to support and engage our community of women in EECS on campus in a team of 3</li>
+      <li>Organizing events that include lightning talks, workshops, movie/game nights, and mixers with other colleges/other women in engineering clubs on campus to bring passionate women together and encourage support of each other</li>
+    </ul>
+  </div>
+  <br>
+    <div class="row">
+    <img style="float: left" hspace="10px" class="img-circle" src="adt.jpg" height="50" width="50">
+    <h3>MIT Asian Dance Team</h3>
+    <h5><strong>Choreographer</strong>  |  <i>Feb 2017-present</i></h5>
+    <ul class="col-md-6 x"> <!-- style="list-style: none"> -->
+      <li>Led a weekly workshop series for Kpop choreography and techniques open to anyone on campus aimed to improve beginning-intermediate dancers</li>
+      <li>Teaching 25+ dancers a dance that will be performed at our semesterly showcase</li>
+      <li>Dancing Kpop and traditional Asian dances
+    </ul>
+  </div>
+  <br>
+  <div class="row">
+    <img style="float: left" hspace="10px" class="img-circle" src="codeu.jpg" height="50" width="50">
+    <h3>Google CodeU Program</h3>
+    <h5><strong>Participant</strong>  |  <i>Feb-May 2017</i></h5>  
+    <ul class="col-md-6 x"> <!-- style="list-style: none"> -->
+      <li>Designed and improved a basic chat application in a team of 3 students, adding features including username and password login, simple cryptography, and database persistence</li>
+      <li>Participated in regular code reviews and technical coding practices with Google engineers and learned industry best practices</li>
+    </ul>
+  </div>
+  <br>
+  <div class="row">
+    <img style="float: left" hspace="10px" class="img-circle" src="upop.jpg" height="50" width="50">
+    <h3>MIT Undergraduate Practice Opportunities Program</h3>
+    <h5><strong>Participant</strong>  |  <i>Oct 2016-present</i></h5>  
+    <ul class="col-md-6 x"> <!-- style="list-style: none"> -->
+      <li>Participating in a yearlong professional development program preparing sophomores for success in the workplace</li>
+      <li>Completed an intensive 1-week professional development workshop taught by MIT faculty and industry professionals, exploring topics such as effective communication, foundational decision-making, and teamwork</li>
+    </ul>
+  </div>
+  <br>
+  <div class="row">
+    <img style="float: left" hspace="10px" class="img-circle" src="codeforgood.jpg" height="50" width="50">
+    <h3>MIT Code For Good</h3>
+    <h5><strong>Consulting Team</strong>  |  <i>Oct 2016-Feb 2017</i></h5>  
+    <ul class="col-md-6 x"> <!-- style="list-style: none"> -->
+      <li>Collaborated in a small team to assist our nonprofit (Green Streets Initiative) with technical issues</li>
+      <li>Created an employer interface on our nonprofit’s website, utilizing Python, Django, and HTML and CSS, so that employers participating in their program, Walk/Ride Day, can access their individual company’s statistics</li>
+      <li>Communicated with our nonprofit to provide solutions and suggestions to any requests for new features/improvements</li>
+    </ul>
+  </div>
+  <br>
+  <div class="row">
+    <img style="float: left" hspace="10px" class="img-circle" src="vex.jpg" height="50" width="50">
+    <h3>WHS Vex Robotics</h3>
+    <h5><strong>Programmer</strong>  |  <i>Sept 2013-Jun 2015</i></h5>  
+    <ul class="col-md-6 x"> <!-- style="list-style: none"> -->
+      <li>Wrote code for our competition and demo robots, showcased at competitions, outreach eventsand demos at local schools and fairs</li>
+      <li>Taught basic RobotC programming and building skills to 20+ students during our “Robocamp” for two summers</li>
+      <li>Demonstrated teamwork, time management, and communication skills to grow as a team and achieve team goals</li>
+    </ul>
   </div>
 </div>
 
 <!-- Container (Funsies Section) -->
 <div id="funsies" class="bg-1 z">
   <div class="container">
-    <h1 class="text-center">Funsies</h1>
-    <p>Fun is an important part of my life.</p>
+    <h1 class="text-center">Hobbies</h1>
     <p>When I'm not doing schoolwork, you can probably find me doing one of the following...</p>
-    <p>I like to do arts and crafts. I enjoy making people star jars, folding origami notes, and making cards for random occasions.</p>
-    <p>I like to pretend I know how to dance. I'm on my school's Asian Dance Team and was in Dance Troupe one semester.</p>
-    <p>I like to travel to pretty places...I dream to see an aurora and a clear, starry sky one day.</p>
-    <p>I also cooking, watching shows, doing jigsaw puzzles, taking pictures of everything, enjoying the sunset, and drinking tea. I love milk tea and macaroni and cheese!</p>
-    <p>You may also find me just staring blank at a random object daydreaming.</p>
+    <p class="w text-center">I like to do arts and crafts, like making star jars as gifts, folding origami, and making cards for random occasions. I like to dance. I'm on my school's Asian Dance Team and like learning various pieces I find on YouTube with friends. I love playing the piano, clarinet, and learning new instruments. I like to travel to pretty, interesting places...I dream to see an aurora and a clear, star speckled sky one day. I also love cooking, watching shows/movies, doing jigsaw puzzles, taking pictures of everything, enjoying the sunset, hanging with friends and family, and drinking tea. I love milk tea and macaroni and cheese!</p>
+    <br>
+    <p>You may also find me just staring blank at a random object daydreaming. I try to appreciate every moment as much as possible because all these moments make up our lives.</p>
     <br><br>
     <center><img src="https://storage.googleapis.com/imgfave/image_cache/1445423826800243.jpg" class="img-circle text-center"></center>
   </div>
