Trying to fix icons

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 
   <h1>Work Experience</h1>
   <div class="row">
-    <img style="float: left" hspace="10px" class="img-circle" src="csail.jpg" height="50" width="50">
+    <img style="float: left" hspace="10px" class="img-circle" src="img/csail.jpg" height="50" width="50">
     <h3>MIT CSAIL Lab</h3>
     <h5><strong>Undergrad Researcher</strong>  |  <i>Jun-Aug 2017</i></h5>
     <ul class="col-md-6 x"> <!-- style="list-style: none"> -->
@@ -139,7 +139,7 @@
   </div>
   <br>
   <div class="row">
-    <img style="float: left" hspace="10px" class="img-circle" src="misti.jpeg" height="50" width="50">
+    <img style="float: left" hspace="10px" class="img-circle" src="img/misti.jpeg" height="50" width="50">
     <h3>MISTI Hong Kong</h3>
     <h5><strong>Undergrad Researcher</strong>  |  <i>Jun-Aug 2016</i></h5>  
     <ul class="col-md-6 x"> <!-- style="list-style: none"> -->
@@ -149,7 +149,7 @@
   </div>
   <br>
   <div class="row">
-    <img style="float: left" hspace="10px" class="img-circle" src="boeing.jpg" height="50" width="50">
+    <img style="float: left" hspace="10px" class="img-circle" src="img/boeing.jpg" height="50" width="50">
     <h3>Boeing HS Internship</h3>
     <h5><strong>Phantom Phoenix Intern</strong>  |  <i>Jun-Aug 2014</i></h5>  
     <ul class="col-md-6 x"> <!-- style="list-style: none"> -->
@@ -160,7 +160,7 @@
   <br>
   <h1>Activities and Leadership</h1>
   <div class="row">
-    <img style="float: left" hspace="10px" class="img-circle" src="wieecs.png" height="50" width="50">
+    <img style="float: left" hspace="10px" class="img-circle" src="img/wieecs.png" height="50" width="50">
     <h3>MIT Women in EECS</h3>
     <h5><strong>Community Events Committee</strong>  |  <i>Aug 2017-present</i></h5>
     <ul class="col-md-6 x"> <!-- style="list-style: none"> -->
@@ -170,7 +170,7 @@
   </div>
   <br>
     <div class="row">
-    <img style="float: left" hspace="10px" class="img-circle" src="adt.jpg" height="50" width="50">
+    <img style="float: left" hspace="10px" class="img-circle" src="img/adt.jpg" height="50" width="50">
     <h3>MIT Asian Dance Team</h3>
     <h5><strong>Choreographer</strong>  |  <i>Feb 2017-present</i></h5>
     <ul class="col-md-6 x"> <!-- style="list-style: none"> -->
@@ -181,7 +181,7 @@
   </div>
   <br>
   <div class="row">
-    <img style="float: left" hspace="10px" class="img-circle" src="codeu.jpg" height="50" width="50">
+    <img style="float: left" hspace="10px" class="img-circle" src="img/codeu.jpg" height="50" width="50">
     <h3>Google CodeU Program</h3>
     <h5><strong>Participant</strong>  |  <i>Feb-May 2017</i></h5>  
     <ul class="col-md-6 x"> <!-- style="list-style: none"> -->
@@ -191,7 +191,7 @@
   </div>
   <br>
   <div class="row">
-    <img style="float: left" hspace="10px" class="img-circle" src="upop.jpg" height="50" width="50">
+    <img style="float: left" hspace="10px" class="img-circle" src="img/upop.jpg" height="50" width="50">
     <h3>MIT Undergraduate Practice Opportunities Program</h3>
     <h5><strong>Participant</strong>  |  <i>Oct 2016-present</i></h5>  
     <ul class="col-md-6 x"> <!-- style="list-style: none"> -->
@@ -201,7 +201,7 @@
   </div>
   <br>
   <div class="row">
-    <img style="float: left" hspace="10px" class="img-circle" src="codeforgood.jpg" height="50" width="50">
+    <img style="float: left" hspace="10px" class="img-circle" src="img/codeforgood.jpg" height="50" width="50">
     <h3>MIT Code For Good</h3>
     <h5><strong>Consulting Team</strong>  |  <i>Oct 2016-Feb 2017</i></h5>  
     <ul class="col-md-6 x"> <!-- style="list-style: none"> -->
@@ -212,7 +212,7 @@
   </div>
   <br>
   <div class="row">
-    <img style="float: left" hspace="10px" class="img-circle" src="vex.jpg" height="50" width="50">
+    <img style="float: left" hspace="10px" class="img-circle" src="img/vex.jpg" height="50" width="50">
     <h3>WHS Vex Robotics</h3>
     <h5><strong>Programmer</strong>  |  <i>Sept 2013-Jun 2015</i></h5>  
     <ul class="col-md-6 x"> <!-- style="list-style: none"> -->
