Trying to fix icons

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
   </div>
   <br>
   <div class="row">
-    <img style="float: left" hspace="10px" class="img-circle" src="img/misti.jpeg" height="50" width="50">
+    <img style="float: left" hspace="10px" class="img-circle" src="img/misti.jpg" height="50" width="50">
     <h3>MISTI Hong Kong</h3>
     <h5><strong>Undergrad Researcher</strong>  |  <i>Jun-Aug 2016</i></h5>  
     <ul class="col-md-6 x"> <!-- style="list-style: none"> -->
