--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
   </div>
   <br>
     <div class="row">
-    <img style="float: left" hspace="10px" class="img-circle" src="img/upop.jpg" height="50" width="50">
+    <img style="float: left" hspace="10px" class="img-circle" src="img/adt.JPG" height="50" width="50">
     <h3>MIT Asian Dance Team</h3>
     <h5><strong>Choreographer</strong>  |  <i>Feb 2017-present</i></h5>
     <ul class="col-md-6 x"> <!-- style="list-style: none"> -->
@@ -181,7 +181,7 @@
   </div>
   <br>
   <div class="row">
-    <img style="float: left" hspace="10px" class="img-circle" src="img/codeu.jpg" height="50" width="50">
+    <img style="float: left" hspace="10px" class="img-circle" src="img/codeu.JPG" height="50" width="50">
     <h3>Google CodeU Program</h3>
     <h5><strong>Participant</strong>  |  <i>Feb-May 2017</i></h5>  
     <ul class="col-md-6 x"> <!-- style="list-style: none"> -->
@@ -201,7 +201,7 @@
   </div>
   <br>
   <div class="row">
-    <img style="float: left" hspace="10px" class="img-circle" src="img/codeforgood.jpg" height="50" width="50">
+    <img style="float: left" hspace="10px" class="img-circle" src="img/codeforgood.JPG" height="50" width="50">
     <h3>MIT Code For Good</h3>
     <h5><strong>Consulting Team</strong>  |  <i>Oct 2016-Feb 2017</i></h5>  
     <ul class="col-md-6 x"> <!-- style="list-style: none"> -->
