--- a/index.html
+++ b/index.html
@@ -233,6 +233,7 @@
     <p>You may also find me just staring blank at a random object daydreaming. I try to appreciate every moment as much as possible because all these moments make up our lives.</p>
     <br><br>
     <center><img src="https://storage.googleapis.com/imgfave/image_cache/1445423826800243.jpg" class="img-circle text-center"></center>
+    <p>Images credit: <a href="https://www.chibird.com">Chibird</a> :)</p>
   </div>
 </div>
 
