--- a/index.html
+++ b/index.html
@@ -54,11 +54,10 @@
 <div id="about" class="container text-center">
   <h3 style="font-size: 275%">Hello, I'm Janice.</h3>
   <div class="a">
-    <p style="font-size: 130%">I'm a computer science student at MIT.</p>
-    <p style="font-size: 130%">One thing I'm passionate about is making the world happier, whether it's helping other people,</p>
-    <p style="font-size: 130%">innovating exciting things, or fixing a few of the many problems that we can't escape.</p>  
-    <p style="font-size: 130%">I believe coding is powerful and can achieve all the above.</p>  
-    <p style="font-size: 130%">Thanks for visiting my site.</p>
+    <p>I'm a computer science student at MIT.</p>
+    <p>One thing I'm passionate about is making the world happier, whether it's helping other people, innovating exciting things, or fixing a few of the many problems that we can't escape.</p>  
+    <p>I believe coding is powerful and can achieve all the above.</p>  
+    <p>Thanks for visiting.</p>
     <br>
   </div>
   <img src="http://24.media.tumblr.com/7f9b45626428bd58107586b7230404cd/tumblr_mk1eszXhbG1qc4uvwo1_500.gif" class="img-circle"/>
@@ -73,12 +72,12 @@
     <div>
       <p>Python</p>  
       <p>Java</p>
-      <p>HTML & CSS (basic)</p>
+      <p>HTML & CSS</p>
       <p>ROS (basic)</p>
     </div>
     <br>
     <h1>Academic Coursework</h1>
-    <div class="row">
+    <div class="row classes">
       <ul class="col-md-6 x" style="list-style: none">
         <li style="font-size: 140%">Freshman Fall</li>
         <li>>  18.02 - Multivariable Calculus</li>
@@ -97,9 +96,14 @@
         <br><br><br>
         <li style="font-size: 140%">Junior Fall</li>
         <li>>  6.034 - Artificial Intelligence</li>
+        <li>>  6.036 - Introduction to Machine Learning</li>
         <li>>  6.046 - Design and Analysis of Algorithms</li>
-        <li>>  21G.503 - Japanese III</li>
-        <li>>  TBD</li>   
+        <li>>  21G.107 - Streamlined Chinese I</li>
+        <br>
+        <li style="font-size: 140%">Junior Spring</li>
+        <li>>  6.831 - User Interface Design & Implementation</li>
+        <li>>  6.033 - Computer System Engineering</li>
+        <li>>  TBD</li>
       </ul>
 
       <ul class="col-md-6 x" style="list-style: none">
@@ -127,7 +131,7 @@
 
   <h1>Work Experience</h1>
   <div class="row">
-    <img style="float: left" hspace="10px" class="img-circle" src="img/csail.jpg" height="50" width="50">
+    <img style="float: left" hspace="10px" class="img-circle icons" src="img/csail.jpg" height="50" width="50">
     <h3>MIT CSAIL Lab</h3>
     <h5><strong>Undergrad Researcher</strong>  |  <i>Jun-Aug 2017</i></h5>
     <ul class="col-md-6 x"> <!-- style="list-style: none"> -->
@@ -138,7 +142,7 @@
   </div>
   <br>
   <div class="row">
-    <img style="float: left" hspace="10px" class="img-circle" src="img/misti.jpeg" height="50" width="50">
+    <img style="float: left" hspace="10px" class="img-circle icons" src="img/misti.jpeg" height="50" width="50">
     <h3>MISTI Hong Kong</h3>
     <h5><strong>Undergrad Researcher</strong>  |  <i>Jun-Aug 2016</i></h5>  
     <ul class="col-md-6 x"> <!-- style="list-style: none"> -->
@@ -148,7 +152,7 @@
   </div>
   <br>
   <div class="row">
-    <img style="float: left" hspace="10px" class="img-circle" src="img/boeing.jpg" height="50" width="50">
+    <img style="float: left" hspace="10px" class="img-circle icons" src="img/boeing.jpg" height="50" width="50">
     <h3>Boeing HS Internship</h3>
     <h5><strong>Phantom Phoenix Intern</strong>  |  <i>Jun-Aug 2014</i></h5>  
     <ul class="col-md-6 x"> <!-- style="list-style: none"> -->
@@ -159,7 +163,7 @@
   <br>
   <h1>Activities and Leadership</h1>
   <div class="row">
-    <img style="float: left" hspace="10px" class="img-circle" src="img/wieecs.png" height="50" width="50">
+    <img style="float: left" hspace="10px" class="img-circle icons" src="img/wieecs.png" height="50" width="50">
     <h3>MIT Women in EECS</h3>
     <h5><strong>Community Events Committee</strong>  |  <i>Aug 2017-present</i></h5>
     <ul class="col-md-6 x"> <!-- style="list-style: none"> -->
@@ -169,7 +173,7 @@
   </div>
   <br>
     <div class="row">
-    <img style="float: left" hspace="10px" class="img-circle" src="img/adt.JPG" height="50" width="50">
+    <img style="float: left" hspace="10px" class="img-circle icons" src="img/adt.JPG" height="50" width="50">
     <h3>MIT Asian Dance Team</h3>
     <h5><strong>Choreographer</strong>  |  <i>Feb 2017-present</i></h5>
     <ul class="col-md-6 x"> <!-- style="list-style: none"> -->
@@ -180,7 +184,7 @@
   </div>
   <br>
   <div class="row">
-    <img style="float: left" hspace="10px" class="img-circle" src="img/codeu.JPG" height="50" width="50">
+    <img style="float: left" hspace="10px" class="img-circle icons" src="img/codeu.JPG" height="50" width="50">
     <h3>Google CodeU Program</h3>
     <h5><strong>Participant</strong>  |  <i>Feb-May 2017</i></h5>  
     <ul class="col-md-6 x"> <!-- style="list-style: none"> -->
@@ -190,7 +194,7 @@
   </div>
   <br>
   <div class="row">
-    <img style="float: left" hspace="10px" class="img-circle" src="img/upop.jpg" height="50" width="50">
+    <img style="float: left" hspace="10px" class="img-circle icons" src="img/upop.jpg" height="50" width="50">
     <h3>MIT Undergraduate Practice Opportunities Program</h3>
     <h5><strong>Participant</strong>  |  <i>Oct 2016-present</i></h5>  
     <ul class="col-md-6 x"> <!-- style="list-style: none"> -->
@@ -200,7 +204,7 @@
   </div>
   <br>
   <div class="row">
-    <img style="float: left" hspace="10px" class="img-circle" src="img/codeforgood.JPG" height="50" width="50">
+    <img style="float: left" hspace="10px" class="img-circle icons" src="img/codeforgood.JPG" height="50" width="50">
     <h3>MIT Code For Good</h3>
     <h5><strong>Consulting Team</strong>  |  <i>Oct 2016-Feb 2017</i></h5>  
     <ul class="col-md-6 x"> <!-- style="list-style: none"> -->
@@ -211,7 +215,7 @@
   </div>
   <br>
   <div class="row">
-    <img style="float: left" hspace="10px" class="img-circle" src="img/vex.jpg" height="50" width="50">
+    <img style="float: left" hspace="10px" class="img-circle icons" src="img/vex.jpg" height="50" width="50">
     <h3>WHS Vex Robotics</h3>
     <h5><strong>Programmer</strong>  |  <i>Sept 2013-Jun 2015</i></h5>  
     <ul class="col-md-6 x"> <!-- style="list-style: none"> -->
@@ -226,19 +230,18 @@
 <div id="funsies" class="bg-1 z">
   <div class="container">
     <h1 class="text-center">Hobbies</h1>
-    <p>When I'm not doing schoolwork, you can probably find me doing one of the following...</p>
+    <p class ="w">Outside of classes, you can probably find me doing one of the following...</p>
     <p class="w text-center">I like to do arts and crafts, like making star jars as gifts, folding origami, and making cards for random occasions. I like to dance. I'm on my school's Asian Dance Team and like learning various pieces I find on YouTube with friends. I love playing the piano, clarinet, and learning new instruments. I like to travel to pretty, interesting places...I dream to see an aurora and a clear, star speckled sky one day. I also love cooking, watching shows/movies, doing jigsaw puzzles, taking pictures of everything, enjoying the sunset, hanging with friends and family, and drinking tea. I love milk tea and macaroni and cheese!</p>
+    <p class ="w">You may also find me just staring blank at a random object daydreaming. I try to appreciate every moment as much as possible because all these moments make up our lives.</p>
     <br>
-    <p>You may also find me just staring blank at a random object daydreaming. I try to appreciate every moment as much as possible because all these moments make up our lives.</p>
-    <br><br>
-    <center><img src="https://storage.googleapis.com/imgfave/image_cache/1445423826800243.jpg" class="img-circle text-center"></center>
+    <center><img src="img/sunshine.gif" class="img-circle sun icons text-center"></center>
     <br><p>Images credit: <a href="http://chibird.com">Chibird</a> :)</p>
   </div>
 </div>
 
 <!-- Footer -->
 <footer class="text-center">
-  <a class="up-arrow" href="#home" data-toggle="tooltip" title="TO TOP">
+  <a class="up-arrow" href="#home" data-toggle="tooltip" title="UP AND AWAY!">
     <span class="glyphicon glyphicon-chevron-up"></span>
   </a><br><br>
   <p>Made with cheese by Janice :)</p> 
