Added/tried stuff

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <p>Thanks for visiting.</p>
     <br>
   </div>
-  <img src="http://24.media.tumblr.com/7f9b45626428bd58107586b7230404cd/tumblr_mk1eszXhbG1qc4uvwo1_500.gif" class="img-circle"/>
+  <img src="http://24.media.tumblr.com/7f9b45626428bd58107586b7230404cd/tumblr_mk1eszXhbG1qc4uvwo1_500.gif" class="img-circle icons"/>
 </div>
 
 
