--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
       <p>Python</p>  
       <p>Java</p>
       <p>HTML & CSS</p>
+      <p>JavaScript (basic)</p>
       <p>ROS (basic)</p>
     </div>
     <br>
