--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
   <br>
   <div class="row">
     <img style="float: left" hspace="10px" class="img-circle icons" src="img/codeforgood.JPG" height="50" width="50">
-    <h3>MIT Code For Good</h3>
+    <h3 id="huh">MIT Code For Good</h3>
     <h5><strong>Consulting Team</strong>  |  <i>Oct 2016-Feb 2017</i></h5>  
     <ul class="col-md-6 x"> <!-- style="list-style: none"> -->
       <li>Collaborated in a small team to assist our nonprofit (Green Streets Initiative) with technical issues</li>
@@ -279,5 +279,9 @@ $(document).ready(function(){
 })
 </script>
 
+<script src="js/testing.js"></script>
+
 </body>
+
 </html>
+
