--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
       <p>Python</p>  
       <p>Java</p>
       <p>HTML & CSS</p>
-      <p>JavaScript (basic)</p>
-      <p>ROS (basic)</p>
+      <p>JavaScript</p>
+      <p>ROS</p>
     </div>
     <br>
     <h1>Academic Coursework</h1>
