Diff colors lol

--- a/index.html
+++ b/index.html
@@ -33,17 +33,17 @@
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
-        <span class="icon-bar"></span>                        
+        <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#home">Janice Lee</a>
+      <a class="navbar-brand" href="#home">JANICE LEE</a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#about">About Me</a></li>
-        <li><a href="#skills">Skills & Coursework</a></li>
-        <li><a href="#things">Experiences</a></li>        
-        <li><a href="#funsies">Hobbies</a></li>
-        <li><a href="LeeResume.pdf">Resume</a></li>
+        <li><a href="#about">ABOUT</a></li>
+        <li><a href="#skills">SKILLS / COURSEWORK</a></li>
+        <li><a href="#things">EXPERIENCE</a></li>
+        <li><a href="#funsies">HOBBIES</a></li>
+        <li><a href="LeeResume.pdf">RESUME</a></li>
       </ul>
     </div>
   </div>
@@ -55,12 +55,12 @@
   <h3 style="font-size: 275%">Hello, I'm Janice.</h3>
   <div class="a">
     <p>I'm a computer science student at MIT.</p>
-    <p>One thing I'm passionate about is making the world happier, whether it's helping other people, innovating exciting things, or fixing a few of the many problems that we can't escape.</p>  
-    <p>I believe coding is powerful and can achieve all the above.</p>  
+    <p>One thing I'm passionate about is making the world happier, whether it's helping other people, innovating exciting things, or fixing a few of the many problems that we can't escape.</p>
+    <p>I believe coding is powerful and can achieve all the above.</p>
     <p>Thanks for visiting.</p>
     <br>
   </div>
-  <img src="http://24.media.tumblr.com/7f9b45626428bd58107586b7230404cd/tumblr_mk1eszXhbG1qc4uvwo1_500.gif" class="img-circle icons"/>
+  <img src="http://24.media.tumblr.com/7f9b45626428bd58107586b7230404cd/tumblr_mk1eszXhbG1qc4uvwo1_500.gif" class="img-circle"/>
 </div>
 
 
@@ -68,16 +68,16 @@
 <!-- Container (Skills Section) -->
 <div id="skills" class="bg-1">
   <div class="container text-center prof">
-    <h1>Skills</h1>
+    <h1>SKILLS</h1>
     <div>
-      <p>Python</p>  
+      <p>Python</p>
       <p>Java</p>
       <p>HTML & CSS</p>
       <p>JavaScript</p>
       <p>ROS</p>
     </div>
     <br>
-    <h1>Academic Coursework</h1>
+    <h1>COURSEWORK</h1>
     <div class="row classes">
       <ul class="col-md-6 x" style="list-style: none">
         <li style="font-size: 140%">Freshman Fall</li>
@@ -88,12 +88,12 @@
         <br>
         <li style="font-size: 140%">Freshman IAP</li>
         <li>>  6.149 - Introduction to Python</li>
-        <br> 
+        <br>
         <li style="font-size: 140%">Freshman Spring</li>
         <li>>  6.01 - Introduction to EECS I</li>
         <li>>  5.111 - Principles of Chemical Science</li>
         <li>>  8.02 - Electricity and Magnetism</li>
-        <li>>  24.01 - Classics of Western Philosophy</li>    
+        <li>>  24.01 - Classics of Western Philosophy</li>
         <br><br><br>
         <li style="font-size: 140%">Junior Fall</li>
         <li>>  6.034 - Artificial Intelligence</li>
@@ -104,7 +104,8 @@
         <li style="font-size: 140%">Junior Spring</li>
         <li>>  6.831 - User Interface Design & Implementation</li>
         <li>>  6.033 - Computer System Engineering</li>
-        <li>>  TBD</li>
+        <li>>  21G.107 - Streamlined Chinese II</li>
+        <li>>  21M.600 - Introduction to Acting</li>
       </ul>
 
       <ul class="col-md-6 x" style="list-style: none">
@@ -127,10 +128,10 @@
 
 <!-- Container (Things Section) -->
 <div id="things" class="container y">
-  <h1 class="text-center">Experiences</h1>
+  <h1 class="text-center">EXPERIENCES</h1>
   <p class="text-center">Here are some things I've done, which include work experience, activities, and leadership roles.</p><br>
 
-  <h1>Work Experience</h1>
+  <h1>WORK EXPERIENCE</h1>
   <div class="row">
     <img style="float: left" hspace="10px" class="img-circle icons" src="img/csail.jpg" height="50" width="50">
     <h3>MIT CSAIL Lab</h3>
@@ -145,7 +146,7 @@
   <div class="row">
     <img style="float: left" hspace="10px" class="img-circle icons" src="img/misti.jpeg" height="50" width="50">
     <h3>MISTI Hong Kong</h3>
-    <h5><strong>Undergrad Researcher</strong>  |  <i>Jun-Aug 2016</i></h5>  
+    <h5><strong>Undergrad Researcher</strong>  |  <i>Jun-Aug 2016</i></h5>
     <ul class="col-md-6 x"> <!-- style="list-style: none"> -->
       <li>Experimented with a Convolutional Neural Network (CNN) Python model to yield best possible time spent and accuracy in training digits and cells data
       <li>Increased accuracy in training by tweaking parameters in the code and learned about machine learning and computer skills</li>
@@ -155,14 +156,14 @@
   <div class="row">
     <img style="float: left" hspace="10px" class="img-circle icons" src="img/boeing.jpg" height="50" width="50">
     <h3>Boeing HS Internship</h3>
-    <h5><strong>Phantom Phoenix Intern</strong>  |  <i>Jun-Aug 2014</i></h5>  
+    <h5><strong>Phantom Phoenix Intern</strong>  |  <i>Jun-Aug 2014</i></h5>
     <ul class="col-md-6 x"> <!-- style="list-style: none"> -->
       <li>Designed a small satellite for the monitoring of earth albedo in a mock project through collaboration with my intern team of 4 and the Boeing Phantom Works division</li>
       <li>Developed experience in teamwork, project management and spacecraft subsystems and analysis</li>
     </ul>
   </div>
   <br>
-  <h1>Activities and Leadership</h1>
+  <h1>ACTIVITIES / LEADERSHIP</h1>
   <div class="row">
     <img style="float: left" hspace="10px" class="img-circle icons" src="img/wieecs.png" height="50" width="50">
     <h3>MIT Women in EECS</h3>
@@ -187,7 +188,7 @@
   <div class="row">
     <img style="float: left" hspace="10px" class="img-circle icons" src="img/codeu.JPG" height="50" width="50">
     <h3>Google CodeU Program</h3>
-    <h5><strong>Participant</strong>  |  <i>Feb-May 2017</i></h5>  
+    <h5><strong>Participant</strong>  |  <i>Feb-May 2017</i></h5>
     <ul class="col-md-6 x"> <!-- style="list-style: none"> -->
       <li>Designed and improved a basic chat application in a team of 3 students, adding features including username and password login, simple cryptography, and database persistence</li>
       <li>Participated in regular code reviews and technical coding practices with Google engineers and learned industry best practices</li>
@@ -197,7 +198,7 @@
   <div class="row">
     <img style="float: left" hspace="10px" class="img-circle icons" src="img/upop.jpg" height="50" width="50">
     <h3>MIT Undergraduate Practice Opportunities Program</h3>
-    <h5><strong>Participant</strong>  |  <i>Oct 2016-present</i></h5>  
+    <h5><strong>Participant</strong>  |  <i>Oct 2016-present</i></h5>
     <ul class="col-md-6 x"> <!-- style="list-style: none"> -->
       <li>Participating in a yearlong professional development program preparing sophomores for success in the workplace</li>
       <li>Completed an intensive 1-week professional development workshop taught by MIT faculty and industry professionals, exploring topics such as effective communication, foundational decision-making, and teamwork</li>
@@ -207,7 +208,7 @@
   <div class="row">
     <img style="float: left" hspace="10px" class="img-circle icons" src="img/codeforgood.JPG" height="50" width="50">
     <h3 id="huh">MIT Code For Good</h3>
-    <h5><strong>Consulting Team</strong>  |  <i>Oct 2016-Feb 2017</i></h5>  
+    <h5><strong>Consulting Team</strong>  |  <i>Oct 2016-Feb 2017</i></h5>
     <ul class="col-md-6 x"> <!-- style="list-style: none"> -->
       <li>Collaborated in a small team to assist our nonprofit (Green Streets Initiative) with technical issues</li>
       <li>Created an employer interface on our nonprofit’s website, utilizing Python, Django, and HTML and CSS, so that employers participating in their program, Walk/Ride Day, can access their individual company’s statistics</li>
@@ -218,7 +219,7 @@
   <div class="row">
     <img style="float: left" hspace="10px" class="img-circle icons" src="img/vex.jpg" height="50" width="50">
     <h3>WHS Vex Robotics</h3>
-    <h5><strong>Programmer</strong>  |  <i>Sept 2013-Jun 2015</i></h5>  
+    <h5><strong>Programmer</strong>  |  <i>Sept 2013-Jun 2015</i></h5>
     <ul class="col-md-6 x"> <!-- style="list-style: none"> -->
       <li>Wrote code for our competition and demo robots, showcased at competitions, outreach eventsand demos at local schools and fairs</li>
       <li>Taught basic RobotC programming and building skills to 20+ students during our “Robocamp” for two summers</li>
@@ -230,12 +231,12 @@
 <!-- Container (Funsies Section) -->
 <div id="funsies" class="bg-1 z">
   <div class="container">
-    <h1 class="text-center">Hobbies</h1>
+    <h1 class="text-center">HOBBIES</h1>
     <p class ="w">Outside of classes, you can probably find me doing one of the following...</p>
     <p class="w text-center">I like to do arts and crafts, like making star jars as gifts, folding origami, and making cards for random occasions. I like to dance. I'm on my school's Asian Dance Team and like learning various pieces I find on YouTube with friends. I love playing the piano, clarinet, and learning new instruments. I like to travel to pretty, interesting places...I dream to see an aurora and a clear, star speckled sky one day. I also love cooking, watching shows/movies, doing jigsaw puzzles, taking pictures of everything, enjoying the sunset, hanging with friends and family, and drinking tea. I love milk tea and macaroni and cheese!</p>
     <p class ="w">You may also find me just staring blank at a random object daydreaming. I try to appreciate every moment as much as possible because all these moments make up our lives.</p>
     <br>
-    <center><img src="img/sunshine.gif" class="img-circle sun icons text-center"></center>
+    <center><img src="img/sunshine.gif" class="img-circle sun text-center"></center>
     <br><p>Images credit: <a href="http://chibird.com">Chibird</a> :)</p>
   </div>
 </div>
@@ -245,14 +246,14 @@
   <a class="up-arrow" href="#home" data-toggle="tooltip" title="UP AND AWAY!">
     <span class="glyphicon glyphicon-chevron-up"></span>
   </a><br><br>
-  <p>Made with cheese by Janice :)</p> 
+  <p>Made with cheese by Janice :)</p>
 </footer>
 
 <script>
 $(document).ready(function(){
   // Initialize Tooltip
-  $('[data-toggle="tooltip"]').tooltip(); 
-  
+  $('[data-toggle="tooltip"]').tooltip();
+
   // Add smooth scrolling to all links in navbar + footer link
   $(".navbar a, footer a[href='#home']").on('click', function(event) {
 
@@ -270,7 +271,7 @@ $(document).ready(function(){
       $('html, body').animate({
         scrollTop: $(hash).offset().top
       }, 900, function(){
-   
+
         // Add hash (#) to URL when done scrolling (default click behavior)
         window.location.hash = hash;
       });
@@ -284,4 +285,3 @@ $(document).ready(function(){
 </body>
 
 </html>
-
